increase wysiwyg line height and li spacing - fixes #52

--- a/src/stylesheets/setup/_typography.sass
+++ b/src/stylesheets/setup/_typography.sass
@@ -131,9 +131,10 @@ button
   p, li
     @extend %pStyles
     @extend %smallFontSize
+    line-height: 1.6em
 
   li
-    margin-bottom: 0
+    margin-bottom: $baseline /3
 
   ul
     list-style-position: outside
